fix bug edit post, overflow text in small notifications

--- a/public/style.css
+++ b/public/style.css
@@ -446,3 +446,9 @@ iframe {
 .invalid-message {
     display: none;
 }
+
+.sm-notification-text {
+    overflow: hidden;
+    white-space: nowrap; 
+    text-overflow: ellipsis;
+}
